tests/expectations/compiler/function/no_return.out
DCE_ENABLED:
Error [ETYC0372036]: Function must return a value.
    --> compiler-test:3:5
     |
   3 |     transition main() -> u8 {}
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372036]: Function must return a value.
    --> compiler-test:3:5
     |
   3 |     transition main() -> u8 {}
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
